comics/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yac
  namespace: comics
spec:
  selector:
    matchLabels:
      app: yac
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: yac
    spec:
      securityContext:
        fsGroup: 33
      containers:
        - image: xthursdayx/yacreaderlibrary-server-docker:latest
          name: yac
          ports:
            - containerPort: 8080
              name: yac
          volumeMounts:
            - mountPath: /comics
              name: comics-data
              readOnly: true
            - mountPath: /config
              name: yac-config
      volumes:
        - name: comics-data
          persistentVolumeClaim:
            claimName: comics-data
            readOnly: true
        - name: yac-config
          persistentVolumeClaim:
            claimName: yac-config
