comics/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yac
  namespace: comics
  labels:
    app: yac
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      name: yac
      targetPort: 8080
  selector:
    app: yac
