comics/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yac
  namespace: comics
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: yac.skj.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yac
                port:
                  number: 8080
  tls:
    - hosts:
        - yac.skj.dev
      secretName: yac-skj-dev-cert
